# assignment-2

./: .gitignore
assignment-2/: CMakeLists.txt  package.xml
assignment-2/launch/: assignement-2.launch.py  assignment-2.launch.py
custom_worlds/: CMakeLists.txt  package.xml
custom_worlds/launch/: custom_worlds.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
custom_worlds/models/custom_house/: model.config  model.sdf
custom_worlds/models/custom_house2/: model.config  model.sdf
custom_worlds/models/custom_world/: model.sdf
custom_worlds/models/turtlebot3_waffle_custom/: model-1_4.sdf  model.sdf
custom_worlds/urdf/: turtlebot3_waffle_custom.urdf
custom_worlds/worlds/: custom_house.world  custom_house2.world  custom_world.world
deploy/docker/person_detector/cpu/: Dockerfile
deploy/docker/turtlebot3_random_bouncer/: Dockerfile
deploy/manifests/: random_bouncer.yaml
turtlebot3_random_bouncer/: package.xml  setup.cfg  setup.py
turtlebot3_random_bouncer/launch/: turtlebot3_random_bouncer.launch.py
turtlebot3_random_bouncer/turtlebot3_random_bouncer/: main.py  utils.py
yolov8_ros2/: package.xml  setup.py
yolov8_ros2/docker/: Dockerfile  entrypoint.sh
yolov8_ros2/k8s/: person_detector.yaml
yolov8_ros2/launch/: person_detector.launch.py
yolov8_ros2/yolov8_ros2/: main.py  person_detector.py  utils.py  view.py  yolov8.py
