<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_ros2</name>
  <version>0.1.0</version>
  <description>Object Detection with YoloV8 and ROS2</description>
  <author email="luizcarloscosmifilho@gmail.com">Luiz Carlos Cosmi Filho</author>
  <maintainer email="luizcarloscosmifilho@gmail.com">Luiz Carlos Cosmi Filho</maintainer>
  <url type="repository">https://github.com/autonomous-robots/assignment-2</url>
  <url type="bugtracker">https://github.com/autonomous-robots/assignment-2/issues</url>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
